@@ -3,3 +3,7 @@
 ** Command: echo 'stderr: tylncf stderr'
 stderr: tylncf stderr
 ** Command: return 1
+runtest: running logged command `output' failed
+runtest: exit status = 1
+runtest: full command line follows
+runtest: output tylncf stderr 1
