@@ -1,4 +1,3 @@
 runtest: running logged command `output' failed
-runtest: exit status = 1
 runtest: full command line follows
-runtest: output tnlncf stderr 1
+runtest: output tylycf stderr 1
