@@ -1,3 +1,12 @@
+2004-09-16 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* scripts/libprometheus.bash.in (logged_failure): Added logging &
+	  reporting of exit status of failed commands.
+	* testsuite/libprometheus/log/*.txt: Updated expected output.
+
+	* scripts/libprometheus.bash.in (log): Added `set -e' to logged command
+	  subshell.
+
 2004-09-15 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* testsuite/libprometheus/log: Added tnlycp_status, tnlycp_stdout,
